Продолжаю делать ДЗ№7. Поработал с макетом 768px

--- a/GoIT/markup/lesson7-8/index.html
+++ b/GoIT/markup/lesson7-8/index.html
@@ -89,17 +89,18 @@
 				<p class="heading4 heading4--gray">recent updates</p>
 				<a class="news__link news__link--recent" href="#">
 					<p class="article__text article__text--news article__text--news--bold">Nunc turpis neque feugiat eget</p>
-					<p class="article__text article__text--news">Posted by Admin on March 13 2012 in Recent News</p>
+					<p class="article__text article__text--news article__text--news--line">Posted by Admin on March 13 2012 in Recent News</p>
 				</a>
 				<a class="news__link news__link--category" href="#">
 					<p class="article__text article__text--news article__text--news--bold">Nunc turpis neque feugiat eget</p>
-					<p class="article__text article__text--news">Posted by Admin on March 13 2012 in Category</p>
+					<p class="article__text article__text--news article__text--news--line">Posted by Admin on March 13 2012 in Category</p>
 				</a>
 				<a class="news__link news__link--blog" href="#">
 					<p class="article__text article__text--news article__text--news--bold">Nunc turpis neque feugiat eget</p>
-					<p class="article__text article__text--news">Posted by Admin on March 13 2012 in Blog Updates</p>
+					<p class="article__text article__text--news article__text--news--line">Posted by Admin on March 13 2012 in Blog Updates</p>
 				</a>
 				<a class="article__link article__link--news" href="#">read more here</a>
+				<a class="article__link article__link--news article__link--news--768" href="#">more blog posts</a>
 			</div>
 		</div>
 	</section>
