Продолжаю работать над ДЗ№7. Наполовину сделал 320px

--- a/GoIT/markup/lesson7-8/index.html
+++ b/GoIT/markup/lesson7-8/index.html
@@ -15,12 +15,20 @@
 		<h1><a class="heading2 heading2--header" href="#">Pingbull<span class="heading2 heading2--header--er">er</span></a></h1>
 		<nav>
 			<ul class="menu menu--header">
-				<li class="menu__item menu__item--first"><a class="menu__link menu__link--header" href="#">dolor sit amet</a></li>
-				<li class="menu__item"><a class="menu__link menu__link--header" href="#">lorem ipsum</a></li>
-				<li class="menu__item"><a class="menu__link menu__link--header" href="#">products</a></li>
-				<li class="menu__item"><a class="menu__link menu__link--header" href="#">blog</a></li>
-				<li class="menu__item"><a class="menu__link menu__link--header" href="#">about</a></li>
-				<li class="menu__item menu__item--last"><a class="menu__link menu__link--header menu__link--current" href="#">home</a></li>
+				<li class="menu__item menu__item--header menu__item--last"><a class="menu__link menu__link--header menu__link--current" href="#">home</a></li>
+				<li class="menu__item menu__item--header"><a class="menu__link menu__link--header" href="#">about</a></li>
+				<li class="menu__item menu__item--header"><a class="menu__link menu__link--header" href="#">blog</a></li>
+				<li class="menu__item menu__item--header"><a class="menu__link menu__link--header" href="#">products</a></li>
+				<li class="menu__item menu__item--header"><a class="menu__link menu__link--header" href="#">lorem ipsum</a></li>
+				<li class="menu__item menu__item--header menu__item--first"><a class="menu__link menu__link--header" href="#">dolor sit amet</a></li>
+			</ul>
+			<ul class="menu menu--header menu--header--less768">
+				<li class="menu__item menu__item--header menu__item--last"><a class="menu__link menu__link--header menu__link--current" href="#">home</a></li>
+				<li class="menu__item menu__item--header"><a class="menu__link menu__link--header" href="#">about</a></li>
+				<li class="menu__item menu__item--header"><a class="menu__link menu__link--header" href="#">blog</a></li>
+				<li class="menu__item menu__item--header"><a class="menu__link menu__link--header" href="#">products</a></li>
+				<li class="menu__item menu__item--header"><a class="menu__link menu__link--header" href="#">lorem ipsum</a></li>
+				<li class="menu__item menu__item--header menu__item--first"><a class="menu__link menu__link--header" href="#">dolor sit amet</a></li>
 			</ul>
 		</nav>
 	</section>
@@ -40,10 +48,10 @@
 	</section>
 	<section class="wrapper">
 		<ul class="menu menu__slider">
-			<li class="menu__item menu__item-slider"><a class="menu__circles menu__circles--slider" href="#"></a></li>
-			<li class="menu__item menu__item-slider"><a class="menu__circles menu__circles--slider" href="#"></a></li>
-			<li class="menu__item menu__item-slider"><a class="menu__circles menu__circles--slider" href="#"></a></li>
-			<li class="menu__item menu__item-slider"><a class="menu__circles menu__circles--slider" href="#"></a></li>
+			<li class="menu__item menu__item--slider"><a class="menu__circles menu__circles--slider" href="#"></a></li>
+			<li class="menu__item menu__item--slider"><a class="menu__circles menu__circles--slider" href="#"></a></li>
+			<li class="menu__item menu__item--slider"><a class="menu__circles menu__circles--slider" href="#"></a></li>
+			<li class="menu__item menu__item--slider"><a class="menu__circles menu__circles--slider" href="#"></a></li>
 		</ul>
 	</section>
 </header>
@@ -109,7 +117,7 @@
 <!-- IMAGES BLOCK -->
 	<section class="images">
 		<div class="wrapper">
-			<ul class="menu menu--images">
+			<ul class="menu images__menu">
 				<li class="menu__item menu__item--images menu__item--images--first"><a class="menu__link menu__link--images menu__link--images--first" href="#"></a></li>
 				<li class="menu__item menu__item--images"><a class="menu__link menu__link--images menu__link--images--second" href="#"></a></li>
 				<li class="menu__item menu__item--images"><a class="menu__link menu__link--images menu__link--images--third" href="#"></a></li>
