ДЗ№7. Доделал макет 320. Пока без пиксельной точности.

--- a/GoIT/markup/lesson7-8/index.html
+++ b/GoIT/markup/lesson7-8/index.html
@@ -33,10 +33,10 @@
 		</nav>
 	</section>
 	<section class="slider">
-		<div class="slider__wrapper">
+		<div class="wrapper slider__wrapper">
 			<a class="slider__arrow slider__arrow--left" href="#"></a>
 			<a class="slider__arrow slider__arrow--right" href="#"></a>
-			<div class="wrapper">
+			<div class="wrapper slider__wrapper--inner">
 				<div class="article article__left article--slider">
 					<p class="heading1">Lorem Ipsum Dolor</p>
 					<p class="heading3">it will make all of your dreams come true</p>
