ДЗ№7-9. Устранил замечания.

--- a/GoIT/markup/lesson7-8/index.html
+++ b/GoIT/markup/lesson7-8/index.html
@@ -49,7 +49,7 @@
 	<section class="wrapper">
 		<ul class="menu menu__slider">
 			<li class="menu__item menu__item--slider"><a class="menu__circles menu__circles--slider" href="#"></a></li>
-			<li class="menu__item menu__item--slider"><a class="menu__circles menu__circles--slider" href="#"></a></li>
+			<li class="menu__item menu__item--slider"><a class="menu__circles menu__circles--slider menu__circles--slider--active" href="#"></a></li>
 			<li class="menu__item menu__item--slider"><a class="menu__circles menu__circles--slider" href="#"></a></li>
 			<li class="menu__item menu__item--slider"><a class="menu__circles menu__circles--slider" href="#"></a></li>
 		</ul>
@@ -89,7 +89,7 @@
 				<p class="article__text article__text--news">“Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar urna risus, mattis pulvinar bibendum in, venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl.”</p>
 				<ul class="menu menu__news">
 					<li class="menu__item menu__item--news"><a class="menu__circles menu__circles--news" href="#"></a></li>
-					<li class="menu__item menu__item--news"><a class="menu__circles menu__circles--news" href="#"></a></li>
+					<li class="menu__item menu__item--news"><a class="menu__circles menu__circles--news menu__circles--news--active" href="#"></a></li>
 					<li class="menu__item menu__item--news"><a class="menu__circles menu__circles--news" href="#"></a></li>
 					<li class="menu__item menu__item--news"><a class="menu__circles menu__circles--news" href="#"></a></li>
 				</ul>
