--- a/GoIT/markup/lesson7-9/index.html
+++ b/GoIT/markup/lesson7-9/index.html
@@ -167,7 +167,7 @@
 				<li class="menu__item menu__item--footer"><a class="menu__link menu__link--footer" href="#">blog</a></li>
 				<li class="menu__item menu__item--footer"><a class="menu__link menu__link--footer" href="#">products</a></li>
 				<li class="menu__item menu__item--footer"><a class="menu__link menu__link--footer" href="#">lorem ipsum</a></li>
-				<li class="menu__item menu__item--footer"><a class="menu__link menu__link--footer menu__link--footer--last" href="#">dolor sit amet</a></li>
+				<li class="menu__item menu__item--footer menu__item--footer--last"><a class="menu__link menu__link--footer" href="#">dolor sit amet</a></li>
 			</ul>
 		</nav>
 		<p class="footer__text">Designed by<span class="footer__text--bold">Pingbull AS</span></p>
