JS# 11-12. Created carousel. TODO: turn carousel to jquery plugin.

--- a/GoIT/markup/js_11-12/index.html
+++ b/GoIT/markup/js_11-12/index.html
@@ -6,9 +6,23 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="js/jquery.rcarousel.js"></script>
     <script src="js/script.js"></script>
 </head>
 <body>
-    div.wrapper>div.inner
+    <h1>rcarousel jQuery plugin</h1>
+    <div class="carousel-wrapper">
+        <ul class="carousel-list">
+            <li class="carousel-element"><img src="img/image01.jpg"><p>Описание 1</p></li>
+            <li class="carousel-element"><img src="img/image02.jpg"><p>Описание 2</p></li>
+            <li class="carousel-element"><img src="img/image03.jpg"><p>Описание 3</p></li>
+            <li class="carousel-element"><img src="img/image04.jpg"><p>Описание 4</p></li>
+            <li class="carousel-element"><img src="img/image05.jpg"><p>Описание 5</p></li>
+        </ul>
+    </div>
+    <div class="carousel-controls">
+        <a class="carousel-arrow-left" href="">Left</a>
+        <a class="carousel-arrow-right" href="">Right</a>
+    </div>
 </body>
 </html>
