--- a/GoIT/markup/js_11-12/index.html
+++ b/GoIT/markup/js_11-12/index.html
@@ -7,22 +7,41 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="js/jquery.rcarousel.js"></script>
+    <script src="js/tmpl.js"></script>
     <script src="js/script.js"></script>
 </head>
 <body>
-    <h1>rcarousel jQuery plugin</h1>
-    <div class="carousel-wrapper">
-        <ul class="carousel-list">
-            <li class="carousel-element"><img src="img/image01.jpg"><p>Описание 1</p></li>
-            <li class="carousel-element"><img src="img/image02.jpg"><p>Описание 2</p></li>
-            <li class="carousel-element"><img src="img/image03.jpg"><p>Описание 3</p></li>
-            <li class="carousel-element"><img src="img/image04.jpg"><p>Описание 4</p></li>
-            <li class="carousel-element"><img src="img/image05.jpg"><p>Описание 5</p></li>
-        </ul>
-    </div>
-    <div class="carousel-controls">
-        <a class="carousel-arrow-left" href="">Left</a>
-        <a class="carousel-arrow-right" href="">Right</a>
+    <div class="wrapper">
+        <div class="user-info clearfix">
+            <a class="user-change" href="#">User 1</a>
+            <a class="user-change" href="#">User 2</a>
+            <h1>Login Information</h1>
+            <div class="login-wrapper">
+                <h2 class="user-name">name</h2>
+                <img class="user-icon" src="img/user01.jpg">
+                <p>user's position</p>
+                <p>description of user</p>
+                <div class="contacts">
+                    <p>My phone number:</p>
+                    <p>tel #</p>
+                </div>
+             </div>
+
+        </div>
+        <h1>rcarousel jQuery plugin</h1>
+        <div class="carousel-wrapper">
+            <ul class="carousel-list">
+                <li class="carousel-element"><img src="img/image01.jpg"><p>Описание 1</p></li>
+                <li class="carousel-element"><img src="img/image02.jpg"><p>Описание 2</p></li>
+                <li class="carousel-element"><img src="img/image03.jpg"><p>Описание 3</p></li>
+                <li class="carousel-element"><img src="img/image04.jpg"><p>Описание 4</p></li>
+                <li class="carousel-element"><img src="img/image05.jpg"><p>Описание 5</p></li>
+            </ul>
+        </div>
+        <div class="carousel-controls">
+            <a class="carousel-arrow-left" href="">Left</a>
+            <a class="carousel-arrow-right" href="">Right</a>
+        </div>
     </div>
 </body>
 </html>
