JS #11-12. Added lodash. Added menu. Minor changes. All working.

--- a/GoIT/markup/js_11-12/lodash.html
+++ b/GoIT/markup/js_11-12/lodash.html
@@ -2,19 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Template of JResig</title>
+    <title>Lodash Template</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="js/jquery-1.11.1.min.js"></script>
     <script src="js/jquery.rcarousel.js"></script>
-    <script src="js/tmpl.js"></script>
-    <script src="js/script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.0.0/lodash.min.js"></script>
+    <script src="js/script_lodash.js"></script>
 </head>
 <body>
     <script type="text/template" id="template">
     <div class="wrapper">
         <div class="user-info clearfix">
-            <a class="change-tmpl" href="lodash.html">Change to lodash</a>
+            <a class="change-tmpl" href="index.html">Change to Resig</a>
             <a class="user-change user-change__1" href="#">User 1</a>
             <a class="user-change user-change__2" href="#">User 2</a>
             <h1>Login Information</h1>
