--- a/GoIT/markup/js_19-20/client_src/index.html
+++ b/GoIT/markup/js_19-20/client_src/index.html
@@ -2,18 +2,15 @@
 <html>
 <head lang="ru">
     <meta charset="UTF-8">
-    <title>Я собираю проекты как рок звезда</title>
+    <title>ffffffffffff</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
     //= template/header.html
 
-    <section class="content">
-        Content
-    </section>
+    //= template/content.html
 
     //= template/footer.html
-
 </body>
 </html>
