--- a/GoIT/markup/js_19-20/client_src/index.html
+++ b/GoIT/markup/js_19-20/client_src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="ru">
     <meta charset="UTF-8">
-    <title>ffffffffffff</title>
+    <title>Build Home Template</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <script type="text/javascript" src="js/main.js"></script>
 </head>
