--- a/GoIT/markup/js_exam/client_src/index.html
+++ b/GoIT/markup/js_exam/client_src/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
     <title>Exam Project</title>
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <script src="libs/jquery/dist/jquery.min.js"></script>
 </head>
 <body>
 
