--- a/GoIT/markup/js_exam/client_src/index.html
+++ b/GoIT/markup/js_exam/client_src/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width">
     <title>Exam Project</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <script src="libs/jquery/dist/jquery.min.js"></script>
 </head>
 <body>
 
@@ -15,5 +14,11 @@
 
     //= template/footer.html
 
+    <script src="libs/jquery/dist/jquery.min.js"></script>
+    <script src="libs/jcarousel/dist/jquery.jcarousel.min.js"></script>
+    <script src="libs/lodash/dist/lodash.min.js"></script>
+    <script src="libs/isotope/dist/isotope.pkgd.min.js"></script>
+    <script src="libs/imagesloaded/imagesloaded.pkgd.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
