Final exam. Some fixes.

--- a/GoIT/markup/js_exam/client_build/index.html
+++ b/GoIT/markup/js_exam/client_build/index.html
@@ -6,8 +6,8 @@
     <title>Exam Project</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <!--[if lt IE 9]>
-        <script src="libs/html5shiv/dist/html5shiv.min.js"></script>
-        <script src="libs/respond/dest/respond.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
 <body>
@@ -35,21 +35,21 @@
                     <li class="tile jcarousel__tile jcarousel__tile--1">
                         <article class="tile__article">
                             <p class="tile__step">Step 1</p>
-                            <p class="tile__heading tile__heading--how">Sed leo enim, condimentum</p>
+                            <h4 class="tile__heading tile__heading--how">Sed leo enim, condimentum</h4>
                             <p class="tile__text">Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec rhoncus a leo sit amet facilisis.</p>
                         </article>
                     </li>
                     <li class="tile jcarousel__tile jcarousel__tile--2">
                         <article class="tile__article">
                             <p class="tile__step">Step 2</p>
-                            <p class="tile__heading tile__heading--how">Morbi velit risus</p>
+                            <h4 class="tile__heading tile__heading--how">Morbi velit risus</h4>
                             <p class="tile__text">Nulla venenatis tempor dui in molestie. Nulla quis dictum purus, sit amet porttitor est.</p>
                         </article>
                     </li>
                     <li class="tile jcarousel__tile jcarousel__tile--3">
                         <article class="tile__article">
                             <p class="tile__step">Step 3</p>
-                            <p class="tile__heading tile__heading--how">Sed leo enim, condimentum</p>
+                            <h4 class="tile__heading tile__heading--how">Sed leo enim, condimentum</h4>
                             <p class="tile__text">Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec rhoncus a leo sit amet facilisis.</p>
                         </article>
                     </li>
@@ -64,21 +64,21 @@
                     <li class="tile jcarousel__tile jcarousel__tile--2">
                         <article class="tile__article">
                             <p class="tile__step">Step 2</p>
-                            <p class="tile__heading tile__heading--how">Morbi velit risus</p>
+                            <h4 class="tile__heading tile__heading--how">Morbi velit risus</h4>
                             <p class="tile__text">Nulla venenatis tempor dui in molestie. Nulla quis dictum purus, sit amet porttitor est.</p>
                         </article>
                     </li>
                     <li class="tile jcarousel__tile jcarousel__tile--3">
                         <article class="tile__article">
                             <p class="tile__step">Step 3</p>
-                            <p class="tile__heading tile__heading--how">Sed leo enim, condimentum</p>
+                            <h4 class="tile__heading tile__heading--how">Sed leo enim, condimentum</h4>
                             <p class="tile__text">Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec rhoncus a leo sit amet facilisis.</p>
                         </article>
                     </li>
                     <li class="tile jcarousel__tile jcarousel__tile--1">
                         <article class="tile__article">
                             <p class="tile__step">Step 1</p>
-                            <p class="tile__heading tile__heading--how">Sed leo enim, condimentum</p>
+                            <h4 class="tile__heading tile__heading--how">Sed leo enim, condimentum</h4>
                             <p class="tile__text">Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec rhoncus a leo sit amet facilisis.</p>
                         </article>
                     </li>
@@ -93,21 +93,21 @@
                     <li class="tile jcarousel__tile jcarousel__tile--3">
                         <article class="tile__article">
                             <p class="tile__step">Step 3</p>
-                            <p class="tile__heading tile__heading--how">Sed leo enim, condimentum</p>
+                            <h4 class="tile__heading tile__heading--how">Sed leo enim, condimentum</h4>
                             <p class="tile__text">Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec rhoncus a leo sit amet facilisis.</p>
                         </article>
                     </li>
                     <li class="tile jcarousel__tile jcarousel__tile--1">
                         <article class="tile__article">
                             <p class="tile__step">Step 1</p>
-                            <p class="tile__heading tile__heading--how">Sed leo enim, condimentum</p>
+                            <h4 class="tile__heading tile__heading--how">Sed leo enim, condimentum</h4>
                             <p class="tile__text">Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec rhoncus a leo sit amet facilisis.</p>
                         </article>
                     </li>
                     <li class="tile jcarousel__tile jcarousel__tile--2">
                         <article class="tile__article">
                             <p class="tile__step">Step 2</p>
-                            <p class="tile__heading tile__heading--how">Morbi velit risus</p>
+                            <h4 class="tile__heading tile__heading--how">Morbi velit risus</h4>
                             <p class="tile__text">Nulla venenatis tempor dui in molestie. Nulla quis dictum purus, sit amet porttitor est.</p>
                         </article>
                     </li>
@@ -124,7 +124,7 @@
         <div class="wrapper wrapper--partner">
             <h3 class="section-heading section-heading--partner">Meet a partner for your best holiday</h3>
             <div class="partner">
-                <img src="img/partner1.png" class="partner__image">
+                <img src="img/partner1.png" class="partner__image" alt="Partner Image">
                 <div class="partner__icon-wrap partner__icon-wrap--red">
                     <div class="partner__icon-tv"></div>
                 </div>
@@ -132,7 +132,7 @@
                 <p class="partner__desc">Based in Chicago. I love playing tennis and loud music.</p>
             </div>
             <div class="partner">
-                <img src="img/partner3.png" class="partner__image">
+                <img src="img/partner3.png" class="partner__image" alt="Partner Image">
                 <div class="partner__icon-wrap partner__icon-wrap--green">
                     <div class="partner__icon-cup"></div>
                 </div>
@@ -140,7 +140,7 @@
                 <p class="partner__desc">I'm a happy person that loves cats and climbing on mountains.</p>
             </div>
             <div class="partner">
-                <img src="img/partner2.png" class="partner__image">
+                <img src="img/partner2.png" class="partner__image" alt="Partner Image">
                 <div class="partner__icon-wrap partner__icon-wrap--yellow">
                     <div class="partner__icon-bottle"></div>
                 </div>
@@ -148,7 +148,7 @@
                 <p class="partner__desc">I get my inspiration from nature and objects around me. I have a passion to colours, typography and skateboards.</p>
             </div>
             <div class="partner">
-                <img src="img/partner4.png" class="partner__image">
+                <img src="img/partner4.png" class="partner__image" alt="Partner Image">
                 <div class="partner__icon-wrap partner__icon-wrap--blue">
                     <div class="partner__icon-plane"></div>
                 </div>
@@ -169,7 +169,7 @@
         <div class="wrapper">
             <h3 class="section-heading">Discover holiday activity ideas</h3>
             <p class="searcher__desc">Hi! What are your holiday interests?</p>
-            <input class="searcher__input" type="text" name="" id="" placeholder="Enter your interests">
+            <input class="searcher__input" type="text" placeholder="Enter your interests">
             <a href="#" class="button button--searcher">Search partners</a>
         </div>
     </section>
@@ -181,7 +181,7 @@
             <% if (( i === 5 ) || ( i === 4 )){ %>
                 tile--ideas-width2
                 <% } %>" style = "background: url(<%= data[i].imageurl %>); background-size: cover">
-                <a href="#"><h3 class="tile__heading tile__heading--ideas"><%= data[i].word %></h3></a>
+                <a href="#" class="tile__heading tile__heading--ideas"><h3><%= data[i].word %></h3></a>
             </div>
         <% }; %>
         </div>
@@ -204,14 +204,11 @@
             </div>
             <div class="designed-by">
                 <p class="designed-by__text">Designed by</p>
-                <img class="designed-by__logo" src="img/footer__logo.png">
+                <img class="designed-by__logo" src="img/footer__logo.png" alt="Designer Logo">
             </div>
         </div>
     </footer>
 
-    <script src="libs/jquery/jquery.min.js"></script>
-    <script src="libs/jcarousel/dist/jquery.jcarousel.min.js"></script>
-    <script src="libs/isotope/dist/isotope.pkgd.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/vendor.min.js"></script>
 </body>
 </html>
