--- a/GoIT/markup/js_exam/client_src/index.html
+++ b/GoIT/markup/js_exam/client_src/index.html
@@ -6,8 +6,8 @@
     <title>Exam Project</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <!--[if lt IE 9]>
-        <script src="libs/html5shiv/dist/html5shiv.min.js"></script>
-        <script src="libs/respond/dest/respond.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
 <body>
@@ -18,9 +18,6 @@
 
     //= template/footer.html
 
-    <script src="libs/jquery/jquery.min.js"></script>
-    <script src="libs/jcarousel/dist/jquery.jcarousel.min.js"></script>
-    <script src="libs/isotope/dist/isotope.pkgd.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/vendor.min.js"></script>
 </body>
 </html>
